force-app/main/default/objects/Line_Item__c/fields/Modal_Number__c.field-meta.xml
<CustomField>
    <fullName>Modal_Number__c</fullName>
    <label>Modal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>