force-app/main/default/objects/Line_Item__c/fields/Refund_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Refund_Percentage__c</fullName>
    <label>Refund %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>